# fractal-thang

./: .clangd  .gitignore  .gitmodules  Makefile  README.md  ROADMAP.md  build.sh  compile_flags.txt
fractal-core/: .clangd  hr.sh  hrN.sh
fractal-core/assets/models/: colonne.fbx  columns.fbx
fractal-core/assets/shaders/: light.vert  passthrough.frag  pbr.frag  pbr.vert
fractal-core/include/: Engine.h  ShaderProgram.h  Texture.h  TextureManager.h  assetutils.h  camera.h  debug-utils.h  gen.h  glreq.h  light.h  lightrenderer.h  mesh.h  meshrenderer.h  renderer.h  shaderprogram.h  textureloader.h  trianglerenderer.h  window.h
fractal-core/include/input/: InputButton.h  InputDevice.h  Keyboard.h  Mouse.h
fractal-core/models/: stone_with_quartz.fbx  tactical_boots_03.fbx
fractal-core/shaders/: passthrough.frag  passthrough.vert
fractal-core/src/: Engine.cpp  ShaderProgram.cpp  Texture.cpp  TextureManager.cpp  assetutils.cpp  camera.cpp  constants.cpp  embinding.cpp  gen.cpp  light.cpp  lightrenderer.cpp  main.cpp  mesh.cpp  meshrenderer.cpp  renderer.cpp  shaderprogram.cpp  textureloader.cpp  trianglerenderer.cpp  window.cpp
fractal-ems/: build.sh  ems.sh
fractal-ems/include/: gen.h
fractal-ems/src/: embinding.cpp  gen.cpp
fractal-thang/: package.json
fractal-thang/cpp/: CMakeLists.txt  Renderer.cpp  build.sh
fractal-thang/src/: App.css  App.tsx  index.css
fractal-web/: .gitignore  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
fractal-web/src/: App.css  App.tsx  index.css
tests/: Makefile
tests/cpp/: sample_test.cpp
(+7 files in other folders)
